backend/TempExecution/f286ac51420e4f9c91924fee6f740179_output.txt
f286ac51420e4f9c91924fee6f740179.cpp: In function 'int main()':
f286ac51420e4f9c91924fee6f740179.cpp:11:5: error: 'cout' was not declared in this scope; did you mean 'std::cout'?
In file included from C:/msys64/ucrt64/include/c++/14.1.0/x86_64-w64-mingw32/bits/stdc++.h:146,
                 from f286ac51420e4f9c91924fee6f740179.cpp:3:
C:/msys64/ucrt64/include/c++/14.1.0/iostream:63:18: note: 'std::cout' declared here
   63 |   extern ostream cout;          ///< Linked to standard output
      |                  ^~~~
